# uptimer

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.arm  LICENSE  README.md  build.rs  config.yaml  docker-compose.yaml  flake.nix  renovate.json
.sqlx/: query-17583166cddf2c0aecdd4fef9fb83ffa144a73a7ae3d9317baa187a0d456ed70.json  query-1d13502c5da49742eebab9af4643ddd0e5d511bfe6e4e35b4789358ebd774fa0.json  query-3b5d8b62bd96a78fbf8efe5c7eec5474002254183bc02f977e0ffcfffbfc1415.json  query-58150fca9eaa5a2ec1c5b5a9066719d3a99ed6205c3e4615fbfb1f849adc2ff3.json  query-865ea282befb8059e34c0c2cbc4739c3ac55ff338fd6ad3d776b6b6e1a097e33.json  query-acedfff7bca49358a53577d8eb464215e6ca1da5462331446fd57dc678eb072a.json  query-bd2dd2575a7903cd2cd0a4bcf73e2240519c3e9860f30239adc933e39463191a.json  query-beb5b014677aa8aeb6df654f8de4cb027eda134d54c5f58c419eb1f4232f2df9.json  query-fa1ccae8b36bfb3b1f50fc748bea552f558b35d512881651eaf88b077ed9bcec.json
go/: go.mod  go.sum  shoutrrr.go
migrations/: 20240606052145_0.1.0.down.sql  20240606052145_0.1.0.up.sql  20240607052942_0.1.2.down.sql  20240607052942_0.1.2.up.sql
release-notes/v0.1.0/: CHANGELOG.md
release-notes/v0.1.1/: CHANGELOG.md
release-notes/v0.1.2/: CHANGELOG.md
release-notes/v0.1.3/: CHANGELOG.md
release-notes/v0.2.0/: CHANGELOG.md
release-notes/v0.2.1/: CHANGELOG.md
release-notes/v0.2.2/: CHANGELOG.md
release-notes/v0.2.3/: CHANGELOG.md
release-notes/v0.3.0/: CHANGELOG.md
src/: main.rs
src/structures/: errors.rs  mod.rs  (+2 more)
templates/: index.html
