[package]
name = "uptimers"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
askama = "0.12.1"
clap = { version = "4.5.4", features = ["env", "derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "time", "tls-native-tls"] }
thiserror = "2.0.0"
time = { version = "0.3.36", features = ["parsing"] }

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
jemallocator = "0.5.4"
